# RLNF-RRT

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.agent/workflows/: git-push.md  paper-review.md  research-log.md  run-experiment.md  run_training_manual_debug.sh
configs/eval/: 128_blocks.toml  collision_loss.toml  deep_coupling_blocks.toml  deep_coupling_blocks_train.toml  default.toml  many_num_points.toml  positional_encoding.toml  positional_encoding_12_coupling_blocks.toml  positional_encoding_8_coupling_blocks.toml  positional_encoding_train.toml  resnet18.toml  resnet18_and_many_block.toml  resnet34.toml  resnet34_and_many_block.toml  resnet34_and_many_block_train.toml  resnet50.toml  resnet50_and_many_block.toml
configs/rl/: default.toml  reinforce2.toml  reinforce3.toml  reinforce4.toml  reinforce_ar.toml  reinforce_resample.toml  (+1 more)
docs/: OPTION_A_B_DESIGN.md  QUICK_START_OPTIONS.md
scripts/: debug_coords.py  eval_nf.py  generator_2d.py  generator_2d_variable_shape.py  practice_realNVP.py  summarize_v5.py  summarize_v6.py  summarize_v6_1.py  test_flow_model.py  test_plannerflows.py  test_plannerflows2.py  train_flow.py  train_nf.py  train_plannerflows.py  train_plannerflows2.py  train_rl.py  train_rl_ar.py  train_rl_resample.py  train_sl.py  train_split_agent.py  train_subgoal.py  verify_condition_quality.py  verify_encoder.py  view_rlnf_dataset.py  visualize_ablation.py  visualize_dataset.py  visualize_each_step.py  visualize_encoder.py  visualize_flow_states.py  visualize_forward_flow.py  visualize_loss.py  visualize_sampling.py
(+73 files in other folders)
